# babeldoc-jobpack

./: .gitignore  PUBLISH.md  README.md  pyproject.toml
examples/: translations.sample.json
src/babeldoc_jobpack/: __init__.py  cli.py  translators.py  workflow.py
